<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select1">select1</string>
    <string name="select2">select2</string>
    <string name="select3">select3</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_surface_view_test">SurfaceViewTest</string>
    <string name="surface_title">surfaceViewTest</string>
    <string name="title_activity_animation">AnimationActivity</string>

</resources>
